--- a/literature.bib
+++ b/literature.bib
@@ -473,6 +473,22 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   url    = {https://www.rfc-editor.org/rfc/rfc7519},
 }
 
+@MastersThesis{Hagg2022,
+  author = {Hagg, Jonas},
+  school = {Technical University of Munich},
+  title  = {Literature research: A cryptographic protocol to maintain confidentiality when storing multi-owner data},
+  year   = {2022},
+  type   = {Studienarbeit},
+}
+
+@Article{Zieglmeier2021,
+  author  = {Zieglmeier, Valentin and Pretschner, Alexander},
+  journal = {arXiv preprint arXiv:2103.10769},
+  title   = {Trustworthy transparency by design},
+  year    = {2021},
+  url     = {https://arxiv.org/pdf/2103.10769.pdf},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
