--- a/txt/99-appendix.tex
+++ b/txt/99-appendix.tex
@@ -24,5 +24,41 @@ This appendix details the applied encryption and decryption algorithms.
     \label{app:decryption_algo}
 \end{figure}
 
+\chapter{Screenshots Clotilde UI}
+
+This appendix contains screenshots of the implemented features in the \textit{Clotilde UI}.
+
+\label{app:screenshots}
+\begin{figure}[h!]
+    \fbox{\includegraphics[scale=0.25]{../img/06/clotilde_overview.jpg}}
+    \centering
+    \caption{
+        The updated overview page of the Clotilde UI. 
+        All logs are visualized as before. 
+        The user can share or revoke access the users having access to a log by clicking on the corresponding button in the table.}
+    \label{app:clotilde-overview}
+\end{figure}
+\newpage
+\begin{figure}[h!]
+   \fbox{\includegraphics[scale=0.25]{../img/06/clotilde_share.jpg}}
+    \centering
+    \caption{
+        This view allows the user to share or revoke access to a log. 
+        On the left-hand side the details of the log are displayed. 
+        On the right-hand side the user can search for other users in the system. 
+        If a user is found it can be added to the set of recipients. 
+        Moreover, the access to certain users can be revoked by removing them from the list of recipients.}
+    \label{app:clotilde-share}
+\end{figure}
+
+\begin{figure}[h!]
+    \fbox{\includegraphics[scale=0.25]{../img/06/clotilde_shared.jpg}}
+    \centering
+    \caption{
+        This view lists all logs which were shared with the logged-in users.
+        It is realized as additional section within the menu.
+    }
+    \label{app:clotilde-shared}
+\end{figure}
 
 \end{document}
